<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8"
    app:cardCornerRadius="@dimen/radius_corner_small"
    android:id="@+id/cardViewDish">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small">

        <ImageView
            android:id="@+id/dishImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/dish_image_desc" />

        <ImageButton
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintTop_toTopOf="@+id/dishImage"
            app:layout_constraintEnd_toEndOf="@+id/dishImage"
            android:contentDescription="@string/dish_name" />

        <TextView
            android:id="@+id/textDishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_name"
            android:textSize="@dimen/text_view_large"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/dishImage"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textDishPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_price"
            android:textSize="@dimen/text_view_medium"
            app:layout_constraintTop_toBottomOf="@+id/textDishName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textDishDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dish_description"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="@dimen/text_view_small"
            app:layout_constraintTop_toBottomOf="@+id/textDishPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textDishIngredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dish_ingredients"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/textDishDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/textDishIngredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
